# docs/swagger.json
@@ -202,7 +202,7 @@
                 }
             }
         },
-        "/brake-pad-wear": {
+        "/brake-wear": {
             "get": {
                 "security": [
                     {
@@ -213,7 +213,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "List applications",
                 "parameters": [
@@ -263,7 +263,7 @@
                 }
             }
         },
-        "/brake-pad-wear/cart-icon": {
+        "/brake-wear/cart-icon": {
             "get": {
                 "security": [
                     {
@@ -274,7 +274,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "Get cart icon info",
                 "responses": {
@@ -302,7 +302,7 @@
                 }
             }
         },
-        "/brake-pad-wear/cart/items": {
+        "/brake-wear/cart/items": {
             "post": {
                 "security": [
                     {
@@ -316,7 +316,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "Add item to draft application",
                 "parameters": [
@@ -361,7 +361,7 @@
                 }
             }
         },
-        "/brake-pad-wear/{id}": {
+        "/brake-wear/{id}": {
             "get": {
                 "security": [
                     {
@@ -372,7 +372,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "Get application by id",
                 "parameters": [
@@ -427,7 +427,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "Update application fields (creator)",
                 "parameters": [
@@ -485,7 +485,7 @@
                     }
                 ],
                 "tags": [
-                    "brake-pad-wear"
+                    "brake-wear"
                 ],
                 "summary": "Soft delete application (creator)",
                 "parameters": [
